# test-conf-website

./: .env.example  .gitignore  README.md  compose.dev.yaml  compose.staging.yaml  compose.yaml  flake.nix  justfile  readme.md
.devcontainer/backend/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  gen.yml  lint.yml  nix.yml  validate-generated-api-client.yml
backend/: .coveragerc  .dockerignore  .gitignore  Dockerfile  alembic.ini  dev-entrypoint.sh  justfile  pyproject.toml  pyrightconfig.json  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 0aa963f8102d_add_events_table.py  0e9b9a9c4ba8_add_globals_table.py  73b3c98b460f_add_static_pages_table.py  88da587105f3_add_imprint_test_key_to_globals_table.py  ac371c2e7891_add_created_at_column_to_users_table.py  f2da44aefb1a_create_users_table.py
backend/scripts/: check.py  dump-fast-api.py
backend/src/backend/: config.py  database.py  main.py  models.py  utils.py
backend/src/backend/models/: responses.py  tables.py
backend/src/backend/routes/: v1_api.py
backend/src/backend/routes/v1/: globals.py  imprint.py
backend/src/backend/seed/: cli.py  dev.py  prod.py
backend/src/backend/seed/data/: imprint.md
backend/src/test/: test_imprint.py  test_main.py  test_meta.py
frontend/: .gitignore  .prettierignore  Dockerfile  README.md  eslint.config.js  justfile  package.json  pnpm-lock.yaml  svelte.config.ts  tsconfig.json  tsconfig.scripts.json  vite.config.ts
frontend/scripts/: gen-types.js  gen-types.ts
frontend/src/: app.html  hooks.server.ts
frontend/src/bff/: client.ts  errors.ts
frontend/src/bff/v1/: globals.server.ts
frontend/src/lib/elements/theme/: select.svelte  theme_select.svelte
frontend/src/lib/helper/: light-dark.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
frontend/src/tests/: sample.test.ts
frontend/static/: main.css
frontend/static/css/: font.css
nix/: backend.nix  common.nix  frontend.nix
open-api/: api.json
ops/: backend.compose.yaml  deploy-staging.sh  deployment-setup.md  frontend.compose.yaml  nginx.compose.yaml  nginx.dev.compose.yaml  nginx.staging.compose.yaml  oauth2-proxy.compose.yaml  postgres.compose.yaml
ops/nginx/dev/: default.conf
ops/nginx/staging/: default.conf
ops/zitadel/: .env.example  README.md  compose.yml
