[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Gerhold", email = "michael.gerhold@web.de" }
]
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.138.0",
    "pydantic>=2.13.4",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.46.0",
    "pyright[nodejs]>=1.1.410",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]

[tool.setuptools.package-data]
"backend" = ["py.typed"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.poe.tasks]
check = { cmd = "scripts/check.py" }
fix = { cmd = "scripts/check.py --fix" }
test = { cmd = "scripts/check.py --test" }
