[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Gerhold", email = "michael.gerhold@web.de" }
]
requires-python = ">=3.13"

dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "sqlmodel>=0.0.39",
    "typer>=0.26.8",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "faker>=40.28.1",
    "poethepoet>=0.47.1",
    "pyright[nodejs]>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.setuptools.package-data]
"backend" = ["py.typed"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.poe.tasks]
check = { cmd = "scripts/check.py" }
fix = { cmd = "scripts/check.py --fix" }
test = { cmd = "scripts/check.py --test" }
run = { cmd = "uvicorn backend.main:app --host 0.0.0.0 --port 8080 --reload" }
